# uni

./: .gitignore
Podstawy_Programowania/: client.py  index.html  regex1.py  regex2.py  server.py  tekst.utf8.txt  telefony-1.txt  telefony-2.txt
WPDSK/: arithmetic.sh  arrays.sh  copyDirTree.sh  createDirs.sh  fileOperations.sh  links.sh  passwdStats.sh  search.sh  task.sh  textSearch1.sh  txtFileStats.sh
WPDSK/Project/: Cargo.toml
WPDSK/Project/src/: cpu.rs  cpu_pager.rs  cpu_scheduler.rs  custom_gen.rs  gen.rs  main.rs  pager_gen.rs  scheduler_gen.rs
WPDSK/Project/tests/paging/: test_data_00.json  test_data_01.json  test_data_02.json  test_data_03.json  test_data_04.json  test_data_05.json
WPDSK/Project/tests/scheduler/: test_data_00.json  test_data_01.json  test_data_02.json  test_data_03.json  test_data_04.json  test_data_05.json  test_data_06.json  test_data_07.json  test_data_08.json  test_data_scheduler_00.json  test_data_scheduler_01.json  test_data_scheduler_02.json  test_data_scheduler_03.json  test_data_scheduler_04.json  test_data_scheduler_05.json
