[package]
name = "cpu-time-simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.21"
rand = "0.8.5"
rand_distr = "0.4.3"
regex = "1.10.4"
rng = "0.1.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
